--- a/Changes
+++ b/Changes
@@ -11,3 +11,6 @@ Revision history for Perl extension Apache::AuthenHook
   - use MP_TRACE_a for internal trace routines
   - bump minimum mod_perl version to 1.99_11 in preparation for
     future access to Apache AUTH_* constants
+
+2.00_04  04.13.2005
+  - updates for mod_perl 2.0-RC5 (1.999_22)
